Bug 164249 Make it possible to ignore certain modifiers on XBL and key nodes (current syntax is modifiers="control any, shift") r=varga sr=bryner